argocd/media/requestrr-k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requestrr-k8s-deployment
  labels:
    app: requestrr-k8s
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: requestrr-k8s
  template:
    metadata:
      labels:
        app: requestrr-k8s
    spec:
      containers:
      - name: requestrr-k8s
        image: thomst08/requestrr:latest
        ports:
        - containerPort: 4545
        volumeMounts:
        - name: config
          mountPath: "/root/config"
          readOnly: false
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 400m
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: requestrr-k8s-pvc
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - api.github.com
          - api.themoviedb.org
          - plex.tv
        options:
          - name: ndots
            value: "1"
