argocd/media/requestrr-k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestrr-k8s-service
spec:
  selector:
    app: requestrr-k8s
  ports:
    - protocol: TCP
      port: 4545
      targetPort: 4545
